Import of FAYLAND/WWW-Google-Contacts-0.01 from CPAN.
gitpan-cpan-distribution: WWW-Google-Contacts
gitpan-cpan-version:      0.01
gitpan-cpan-path:         FAYLAND/WWW-Google-Contacts-0.01.tar.gz
gitpan-cpan-author:       FAYLAND
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -13,4 +13,4 @@ requires:
   Net::Google::AuthSub: 0
 resources:
   repository: http://github.com/fayland/www-google-contacts
-version: 0.01_02
+version: 0.01
