Import of FAYLAND/WWW-Google-Contacts-0.02 from CPAN.
gitpan-cpan-distribution: WWW-Google-Contacts
gitpan-cpan-version:      0.02
gitpan-cpan-path:         FAYLAND/WWW-Google-Contacts-0.02.tar.gz
gitpan-cpan-author:       FAYLAND
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -11,6 +11,7 @@ name: WWW-Google-Contacts
 requires:
   LWP::UserAgent: 0
   Net::Google::AuthSub: 0
+  XML::Simple: 0
 resources:
   repository: http://github.com/fayland/www-google-contacts
-version: 0.01
+version: 0.02
