--- a/META.yml
+++ b/META.yml
@@ -2,16 +2,17 @@
 abstract: 'Google Contacts Data API'
 author:
   - 'Fayland Lam <fayland@gmail.com>'
-generated_by: 'Dist::Zilla version 1.093400'
+generated_by: 'Dist::Zilla version 1.100160'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: 1.4
 name: WWW-Google-Contacts
 requires:
+  ExtUtils::MakeMaker: 6.11
   LWP::UserAgent: 0
   Net::Google::AuthSub: 0
   XML::Simple: 0
 resources:
   repository: http://github.com/fayland/www-google-contacts
-version: 0.03
+version: 0.04
