--- a/dist.ini
+++ b/dist.ini
@@ -1,6 +1,7 @@
 name    = WWW-Google-Contacts
-version = 0.05
+version = 0.06
 author = Fayland Lam <fayland@gmail.com>
+author = Magnus Erixzon <magnus@erixzon.com>
 license = Perl_5
 copyright_holder = Fayland Lam
 
@@ -11,3 +12,6 @@ bundle = @FAYLAND
 LWP::UserAgent = 0
 Net::Google::AuthSub = 0
 XML::Simple = 0
+Moose = 0
+MooseX::Types = 0
+MooseX::Singleton = 0
