Import of MERIXZON/WWW-Google-Contacts-0.08 from CPAN.
gitpan-cpan-distribution: WWW-Google-Contacts
gitpan-cpan-version:      0.08
gitpan-cpan-path:         MERIXZON/WWW-Google-Contacts-0.08.tar.gz
gitpan-cpan-author:       MERIXZON
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -14,6 +14,7 @@ meta-spec:
   version: 1.4
 name: WWW-Google-Contacts
 requires:
+  Crypt::SSLeay: 0
   LWP::UserAgent: 0
   Moose: 0
   MooseX::Singleton: 0
@@ -22,4 +23,4 @@ requires:
   XML::Simple: 0
 resources:
   repository: http://github.com/merixzon/www-google-contacts
-version: 0.07
+version: 0.08
