--- a/dist.ini
+++ b/dist.ini
@@ -1,5 +1,5 @@
 name    = WWW-Google-Contacts
-version = 0.11
+version = 0.12
 author = Magnus Erixzon <magnus@erixzon.com>
 author = Fayland Lam <fayland@gmail.com>
 license = Perl_5
@@ -8,11 +8,11 @@ copyright_holder = Fayland Lam
 [@Filter]
 bundle = @FAYLAND
 
-[Prereq]
+[Prereqs]
 LWP::UserAgent = 0
 Net::Google::AuthSub = 0
 XML::Simple = 0
 Moose = 0
 MooseX::Types = 0
-MooseX::Singleton = 0
+MooseX::Singleton = 0.25
 Crypt::SSLeay = 0
