Import of MERIXZON/WWW-Google-Contacts-0.16 from CPAN.
gitpan-cpan-distribution: WWW-Google-Contacts
gitpan-cpan-version:      0.16
gitpan-cpan-path:         MERIXZON/WWW-Google-Contacts-0.16.tar.gz
gitpan-cpan-author:       MERIXZON
gitpan-cpan-maturity:     released

--- a/dist.ini
+++ b/dist.ini
@@ -1,5 +1,5 @@
 name    = WWW-Google-Contacts
-version = 0.15
+version = 0.16
 author = Magnus Erixzon <magnus@erixzon.com>
 license = Perl_5
 copyright_holder = Magnus Erixzon
@@ -21,3 +21,4 @@ Moose = 0
 MooseX::Types = 0
 MooseX::Singleton = 0.25
 Crypt::SSLeay = 0
+File::Slurp = 0
