--- a/META.yml
+++ b/META.yml
@@ -6,7 +6,7 @@ build_requires: {}
 configure_requires:
   ExtUtils::MakeMaker: 6.31
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.101831, CPAN::Meta::Converter version 2.101670'
+generated_by: 'Dist::Zilla version 4.102342, CPAN::Meta::Converter version 2.101670'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -14,6 +14,7 @@ meta-spec:
 name: WWW-Google-Contacts
 requires:
   Crypt::SSLeay: 0
+  File::Slurp: 0
   LWP::UserAgent: 0
   Moose: 0
   MooseX::Singleton: 0.25
@@ -22,4 +23,4 @@ requires:
   XML::Simple: 0
 resources:
   repository: http://github.com/merixzon/www-google-contacts
-version: 0.15
+version: 0.16
