--- a/META.yml
+++ b/META.yml
@@ -20,7 +20,8 @@ requires:
   MooseX::Singleton: 0.25
   MooseX::Types: 0
   Net::Google::AuthSub: 0
+  Perl6::Junction: 0
   XML::Simple: 0
 resources:
   repository: http://github.com/merixzon/www-google-contacts
-version: 0.16
+version: 0.17
