Import of MERIXZON/WWW-Google-Contacts-0.24 from CPAN.
gitpan-cpan-distribution: WWW-Google-Contacts
gitpan-cpan-version:      0.24
gitpan-cpan-path:         MERIXZON/WWW-Google-Contacts-0.24.tar.gz
gitpan-cpan-author:       MERIXZON
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -13,6 +13,7 @@ meta-spec:
   version: 1.4
 name: WWW-Google-Contacts
 requires:
+  Class::MOP: 1.09
   Crypt::SSLeay: 0
   File::Slurp: 0
   LWP::UserAgent: 0
@@ -25,4 +26,4 @@ requires:
   XML::Simple: 0
 resources:
   repository: http://github.com/merixzon/www-google-contacts
-version: 0.23
+version: 0.24
