--- a/dist.ini
+++ b/dist.ini
@@ -1,5 +1,5 @@
 name    = WWW-Google-Contacts
-version = 0.32
+version = 0.33
 author = Magnus Erixzon <magnus@erixzon.com>
 license = Perl_5
 copyright_holder = Magnus Erixzon
@@ -25,3 +25,4 @@ File::Slurp = 0
 Perl6::Junction = 0
 MooseX::Role::Parameterized = 0
 Class::MOP = 1.09
+Try::Tiny = 0
